--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -123,7 +123,8 @@ struct {{entity}}ListView: View {
                     },
                     onDuplicate: {
                         selectedForDuplicate = .init(wrapper.value)
-                    }
+                    },
+                    viewModel: viewModel
                 )
             }
             .confirmationDialog("Are you sure you want to delete this item?", isPresented: Binding(get: {
