--- a/src/main/resources/templates/infrastructure/repository.mustache
+++ b/src/main/resources/templates/infrastructure/repository.mustache
@@ -51,11 +51,11 @@ public interface {{name}}Repository extends JpaRepository<{{entityName}}, String
 
 	{{#shared}}
     @Query("""
-    SELECT DISTINCT s FROM Sale s
-    LEFT JOIN SaleUser su ON su.sale = s
+    SELECT DISTINCT s FROM {{entityName}} s
+    LEFT JOIN {{entityName}}User su ON su.{{entityNameLowerCase}} = s
     WHERE s.tenant.id = :tenantId AND (s.createdBy.id = :userId OR su.user.id = :userId)
     """)
-	Page<Sale> findAllOwnedOrShared(@Param("userId") String userId, @Param("tenantId") String tenantId, Pageable pageable);
+	Page<{{entityName}}> findAllOwnedOrShared(@Param("userId") String userId, @Param("tenantId") String tenantId, Pageable pageable);
 	{{/shared}}
 
 
